--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -217,7 +217,7 @@
     <string name="status_string_worker">員工 %s 的紀錄</string>
     <string name="status_string_task">工作項目 %s 的記錄</string>
 
-    <!-- InfoFragment -->
+    <!-- Main information -->
     <string name="main_information_worker_on">上班人數</string>
     <string name="main_information_worker_overtime">加班人數</string>
     <string name="main_information_warning">發生警訊</string>
@@ -236,6 +236,7 @@
     <string name="main_information_list_leave_workers_type">假別</string>
     <string name="main_information_list_leave_workers_worker">請假人員</string>
     <string name="main_information_list_leave_workers_date">日期</string>
+    <string name="main_information_add_notify_time_button">+%1$d分鐘</string>
 
     <!-- Login Activity -->
     <string name="login_account">帳號</string>
