--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -248,14 +248,14 @@
     <string name="main_information_list_leave_workers_type">Type</string>
     <string name="main_information_list_leave_workers_worker">Worker</string>
     <string name="main_information_list_leave_workers_date">Date</string>
-    <string name="main_information_$">"$%1$d</string>
+    <string name="main_information_$">$%1$d</string>
+    <string name="main_information_add_notify_time_button">+%1$d mins</string>
 
     <!-- Login Activity -->
     <string name="login_account">Account</string>
     <string name="login_password">Password</string>
     <string name="login">Login</string>
     <string name="logout">Logout</string>
-
 
     <!-- Employee Activity Translations -->
     <string name="worker_check_in">Check In</string>
