[AssignTask] Modify the UI of a task card
Change the displayed way from grid view to list view.

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -8,7 +8,7 @@
     <string name="processing">處理中</string>
 
     <!-- Task status -->
-    <string name="task_status_unclaimed">尚未開始</string>
+    <string name="task_status_unclaimed">尚無排程</string>
     <string name="task_status_pending">已排程</string>
     <string name="task_status_wip">正常工作中</string>
     <string name="task_status_pause">暫停</string>
