--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,6 +145,7 @@
     <string name="drawer_equipment">Equipment</string>
     <string name="drawer_equipment_overview">Equipment Overview</string>
     <string name="drawer_add_equipment">Add equipment</string>
+    <string name="drawer_warning">Warning</string>
     <string name="drawer_log_out">Log out</string>
 
     <!-- Equipment Overview fragment -->
