--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -293,7 +293,9 @@
     <string name="task_dispatch">把工作發派給：</string>
 
     <!-- Warning fragment -->
-    <string name="manage_warning">管理警訊</string>
-    <string name="all_warnings">"全部"</string>
+    <string name="warning_manage_warning">管理警訊</string>
+    <string name="warning_all_warnings">"全部"</string>
+    <string name="warning_card_pic">處理人</string>
+    <string name="warning_card_warning">警訊</string>
 
 </resources>
