--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -241,6 +241,7 @@
     <string name="status_string_worker">Worker %s records</string>
     <string name="status_string_task">Task %s records</string>
     <string name="status_no_wip_task_text">No WIP task</string>
+    <string name="status_string_detailed_task">Task records</string>
 
     <!-- Main information -->
     <string name="main_information_board_0">0</string>
