--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -312,4 +312,10 @@
     <string name="warning_card_pic">PIC</string>
     <string name="warning_card_warning">Warning</string>
 
+    <!-- Worker overview attendance -->
+    <string name="worker_overview_attendance_leave_date">Leave date</string>
+    <string name="worker_overview_attendance_leave_time">Leave time</string>
+    <string name="worker_overview_attendance_leave_type">Leave type</string>
+    <string name="worker_overview_attendance_leave_reason">Leave reason</string>
+
 </resources>
