--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -309,4 +309,10 @@
     <string name="worker_overview_attendance_time_range_afternoon">下午</string>
     <string name="worker_overview_attendance_time_range_whole_day">全天</string>
 
+    <!-- Warning Dialog -->
+    <string name="warning_dialog_create_warning">新增警訊</string>
+    <string name="warning_dialog_warning_title">警訊</string>
+    <string name="warning_dialog_warning_lead">警訊負責人</string>
+    <string name="warning_dialog_warning_description_title">描述警訊</string>
+    <string name="warning_dialog_warning_description">描述警訊內容</string>
 </resources>
