[WorkerOverview][DetailedWorker] Add worker's wip equipment

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -6,6 +6,7 @@
     <string name="no_internet_connection">請檢查您的連線狀態，然後再試一次。</string>
     <string name="retry">重試</string>
     <string name="processing">處理中</string>
+    <string name="no_equipment">無使用機器</string>
 
     <!-- Task status -->
     <string name="task_status_unclaimed">尚無排程</string>
@@ -41,7 +42,6 @@
     <string name="task_case_progress_text">案件進度</string>
     <string name="task_case_participated_worker_text">參與員工</string>
     <string name="task_case_edit_text">修改案件</string>
-    <string name="task_card_no_equipment">無使用工具</string>
     <string name="task_card_no_worker">無員工</string>
     <string name="worker_action_start">全體動作</string>
     <string name="worker_card_next_task_text">下個項目</string>
