--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -293,6 +293,10 @@
     <string name="task_complete_exception">解除工作警訊：</string>
     <string name="task_dispatch">把工作發派給：</string>
 
+    <!-- Task Warning Activity Translations -->
+    <string name="task_warning_open">發生警訊</string>
+    <string name="task_warning_close">解除警訊</string>
+
     <!-- Warning fragment -->
     <string name="warning_manage_warning">管理警訊</string>
     <string name="warning_all_warnings">"全部"</string>
