--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -1,5 +1,6 @@
 <resources>
 
+    <string name="app_name">nicloud 雲工廠</string>
     <string name="action_refresh">更新</string>
     <string name="edit">編輯</string>
     <string name="cancel">取消</string>
