--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">WorkFlowAndroid</string>
+    <string name="app_name">nicloud Factory</string>
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
     <string name="date_format_string">%1$s/%2$s/%3$s</string>
