--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -320,4 +320,9 @@
     <string name="warning_dialog_warning_lead">警訊負責人</string>
     <string name="warning_dialog_warning_description_title">描述警訊</string>
     <string name="warning_dialog_warning_description">描述警訊內容</string>
+
+    <!-- Downloading -->
+    <string name="download_file">下載檔案</string>
+    <string name="downloading">下載中</string>
+    <string name="download_completed">下載完成</string>
 </resources>
