--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -335,8 +335,8 @@
     <string name="warning_dialog_warning_description_title">Warning Description</string>
     <string name="warning_dialog_warning_description">Description</string>
 
-    <!-- Downloading -->
-    <string name="download_file">Download File</string>
-    <string name="downloading">Downloading</string>
+    <!-- Download file -->
+    <string name="download_file">"Download File  %1$s"</string>
+    <string name="downloading">Downloading...</string>
     <string name="download_completed">Download Completed</string>
 </resources>
